[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player_Enemy/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Block/Exit_Teleport.tscn" type="PackedScene" id=3]
[ext_resource path="res://Block/Enter_Teleport.tscn" type="PackedScene" id=4]
[ext_resource path="res://Map/Map_1_0.gd" type="Script" id=5]
[ext_resource path="res://Player_Enemy/NPC_Map_1_0.tscn" type="PackedScene" id=6]
[ext_resource path="res://Tools/Key.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 527, 31 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 79, 23 )

[node name="Map_1_0" type="Node2D"]
script = ExtResource( 5 )

[node name="Teleport" type="Node2D" parent="."]

[node name="Enter_Teleport" parent="Teleport" instance=ExtResource( 4 )]
position = Vector2( 92, 413 )

[node name="Exit_Teleport" parent="Teleport/Enter_Teleport" instance=ExtResource( 3 )]
position = Vector2( 0, -387 )

[node name="Enter_Teleport2" parent="Teleport" instance=ExtResource( 4 )]
position = Vector2( 913, 53 )

[node name="Exit_Teleport" parent="Teleport/Enter_Teleport2" instance=ExtResource( 3 )]
position = Vector2( 338, 349 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 510, 542 )
scale = Vector2( 5000, 1 )
shape = SubResource( 1 )

[node name="Icon" type="Sprite" parent="StaticBody2D/CollisionShape2D"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -0.0126, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 491, 171 )
scale = Vector2( 5000, 1 )
shape = SubResource( 1 )

[node name="Icon2" type="Sprite" parent="StaticBody2D/CollisionShape2D2"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0.0026, -2 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 475, 264 )

[node name="Label" type="Label" parent="."]
margin_left = 173.0
margin_top = 386.0
margin_right = 224.0
margin_bottom = 400.0
text = "Map 1.1"

[node name="Label2" type="Label" parent="."]
margin_left = 172.0
margin_top = 44.0
margin_right = 223.0
margin_bottom = 58.0
text = "Map 1.2"

[node name="Label3" type="Label" parent="."]
margin_left = -159.0
margin_top = 78.0
margin_right = -108.0
margin_bottom = 92.0
text = "Next map"

[node name="Next_Map" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Next_Map"]
position = Vector2( -135, 88 )
shape = SubResource( 2 )

[node name="Save_Map" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Save_Map"]
position = Vector2( 478, 305 )
shape = SubResource( 2 )

[node name="NPC_Map_1_0" parent="." instance=ExtResource( 6 )]
position = Vector2( 756, 459 )

[node name="Key" parent="." instance=ExtResource( 7 )]
position = Vector2( 535, 37 )

[connection signal="body_entered" from="Next_Map" to="." method="_on_Next_Map_body_entered"]
[connection signal="body_exited" from="Save_Map" to="." method="_on_Save_Map_body_exited"]
[connection signal="body_entered" from="Key" to="." method="_on_Key_body_entered"]
[connection signal="body_entered" from="Key" to="NPC_Map_1_0" method="_on_Key_body_entered"]
